# tonic-bench

./: Cargo.toml  readme.md
proto/: broker.proto
src/: bench.rs  broker.rs
