[package]
name = "tonic_bench"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "neon_broker"
path = "src/broker.rs"

[[bin]]
name = "neon_broker_bench"
path = "src/bench.rs"

[dependencies]
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
clap = { version = "3.2.17", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8"
